improved mobile nav, and fixed missing icons
Improved mobile nav by making it center correctly, have the "x" to close
it align correctly on mobile safari, make the overlay tint to cover the
entire screen (even while scrolling), and keep the menu fixed to the
same place on the screen.
Also, the menu close icon was missing, and the reddit icon displayed on
the login page was using the old class still.

--- a/css/bbdraft_icons.css
+++ b/css/bbdraft_icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'bbdraft_icons';
-  src:  url('../font/bbdraft_icons.eot?xuae7z');
-  src:  url('../font/bbdraft_icons.eot?xuae7z#iefix') format('embedded-opentype'),
-    url('../font/bbdraft_icons.ttf?xuae7z') format('truetype'),
-    url('../font/bbdraft_icons.woff?xuae7z') format('woff'),
-    url('../font/bbdraft_icons.svg?xuae7z#bbdraft_icons') format('svg');
+  src:  url('../font/bbdraft_icons.eot?c6os62');
+  src:  url('../font/bbdraft_icons.eot?c6os62#iefix') format('embedded-opentype'),
+    url('../font/bbdraft_icons.ttf?c6os62') format('truetype'),
+    url('../font/bbdraft_icons.woff?c6os62') format('woff'),
+    url('../font/bbdraft_icons.svg?c6os62#bbdraft_icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -50,6 +50,9 @@
 }
 .icon-medalbronze:before {
   content: "\e907";
+}
+.icon-close:before {
+  content: "\e90a";
 }
 .icon-bug:before {
   content: "\e900";
